src/test/testFiles/valid/chars.val
let x = 'a';
let y = 'a' * 3;
let z = 'a' - 'b';
let n = 'a' * 'b';
let o = 'a' == 'a';
let a = 'a' < 'b';