src/test/testFiles/invalid/semanticErrors/incompatibleOperatorTypeError.val
let x = true;
let y = x + 3;
